--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <header>
   <nav class="nav-wrapper transparent">
     <div class="container">
-      <a href="#" class="brand-logo">Ortwin</a>
+      <a href="#" class="brand-logo"></a>
       <a href="" class="sidenav-trigger" data-trigger="mobile-menu">
-        <i class="material-icons">menu</i>
+        <i class="material-icons">Menu</i>
       </a>
-      <ul class="nav-mobile" class="right hide-on-med-and-down>
+      <ul class="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="#">Home</a></li>
         <li><a href="#">Shoes</a></li>
         <li><a href="#">Contact</a></li>
@@ -51,12 +51,12 @@
     <div class="main">
       <div class="content">
         <div class="row">
-          <div class="col"></div>
+
           <div class="col s12 m3">
             <div class="card">
               <div class="card-image">
                 <img src="clarks.jpg">
-                <span class="card-title">Herenschoenen</span>
+                <span class="card-title"></span>
               </div><!--close div card-image-->
               <div class="card-content">
                 <p>Collectie Herenschoenen</p>
@@ -68,7 +68,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="dorkwin.jpg">
-                <span class="card-title">Vrouwenschoenen</span>
+                <span class="card-title"></span>
               </div><!--close div card-image-->
               <div class="card-content">
                 <p>Collectie Vrouwenschoenen</p>
@@ -80,7 +80,7 @@
             <div class="card">
               <div class="card-image">
                 <img src="ciao_kids.jpg">
-                <span class="card-title">Kinderschoenen</span>
+                <span class="card-title" ></span>
               </div><!--close div card-image-->
               <div class="card-content">
                 <p>Collectie Kinderschoenen</p>
@@ -98,26 +98,29 @@
         <footer class="page-footer">
           <div class="container">
             <div class="row">
-              <div class="col l6 s12">
-                <h5 class="white-text">Ortwin</h5>
-                <img href="logo_ortwin.jpg">
-                <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="white-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-              </div>
+              <div class="col s12 m12">  <img src="logo_ortwin.jpg" height="50px" widt="50px"></div>
+            <div class="row">
+              <div class="col s12 l12">
+                <p class="grey-text text-lighten-4">Trapstraat 38</p>
+                            <p class="grey-text text-lighten-4">9620 Zottegem</p>
+                          </div>
+  <nav>
+    <div class="nav-wrapper">
+       <div class="col s12 m12" class="right-align">
+         <a href="#!" class="breadcrumb">First</a>
+         <a href="#!" class="breadcrumb">Second</a>
+         <a href="#!" class="breadcrumb">Third</a>
+       </div>
+   </div>
+ </nav>
             </div>
-          </div>
+        </div>
+      </div>
           <div class="footer-copyright">
             <div class="container">
             © 2014 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+
+            <a class="grey-text text-lighten-2 right" href="mailto:#!">shoes@ortwin.be</a>
             </div>
           </div>
         </footer>
