trying to get the breadcrums right

--- a/index.html
+++ b/index.html
@@ -98,16 +98,18 @@
         <footer class="page-footer">
           <div class="container">
             <div class="row">
-              <div class="col s12 m12">  <img src="logo_ortwin.jpg" height="50px" widt="50px"></div>
+              <div class="left"> <img src="logo_ortwin.jpg" height="20px" widt="20px">
+              </div>
             <div class="row">
               <div class="col s12 l12">
                 <p class="grey-text text-lighten-4">Trapstraat 38</p>
-                            <p class="grey-text text-lighten-4">9620 Zottegem</p>
-                          </div>
+                <p class="grey-text text-lighten-4">9620 Zottegem</p>
+            </div>
+          </div>
   <nav>
     <div class="nav-wrapper">
-       <div class="col s12 m12" class="right-align">
-         <a href="#!" class="breadcrumb">First</a>
+       <div class="col l12 push-l8">
+         <a href="#!" class="breadcrumb">Home</a>
          <a href="#!" class="breadcrumb">Second</a>
          <a href="#!" class="breadcrumb">Third</a>
        </div>
