copying the homepage to make other pages

--- a/contact.html
+++ b/contact.html
@@ -110,8 +110,8 @@
     <div class="nav-wrapper">
        <div class="col l12 push-l8">
          <a href="#!" class="breadcrumb">Home</a>
-         <a href="#!" class="breadcrumb">Second</a>
-         <a href="#!" class="breadcrumb">Third</a>
+         <a href="#!" class="breadcrumb">Shoes</a>
+         <a href="#!" class="breadcrumb">Contact</a>
        </div>
    </div>
  </nav>
