footer en banner op volledige page

--- a/shoes.html
+++ b/shoes.html
@@ -8,7 +8,7 @@
 
   <!-- Compiled and minified CSS -->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+<link rel="stylesheet" type="text/css" href="mystyle.css">
  <!-- Compiled and minified JavaScript -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <style>
@@ -109,8 +109,8 @@
   <nav>
     <div class="nav-wrapper">
        <div class="col l12 push-l8">
-         <a href="#!" class="breadcrumb">Home</a>
-         <a href="#!" class="breadcrumb">Shoes</a>
+         <a href="index.html" class="breadcrumb">Home</a>
+         <a href="shoes.html" class="breadcrumb">Shoes</a>
 
        </div>
    </div>
