--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
 
   <!-- Compiled and minified CSS -->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+<link rel="stylesheet" type="text/css" href="mystyle.css">
  <!-- Compiled and minified JavaScript -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <style>
@@ -37,9 +37,9 @@
       </ul>
 
       <ul class="sidenav grey darken-3" id="mobile-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Shoes</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><h1><a href="#">Home</a></h1></li>
+        <li><h2><a href="#">Shoes</a></h2></li>
+        <li><h2><a href="#">Contact</a></h2></li>
       </ul>
 
 
@@ -109,9 +109,9 @@
   <nav>
     <div class="nav-wrapper">
        <div class="col l12 push-l8">
-         <a href="#!" class="breadcrumb">Home</a>
-         <a href="#!" class="breadcrumb">Shoes</a>
-         <a href="#!" class="breadcrumb">Contact</a>
+         <a href="index.html" class="breadcrumb">Home</a>
+         <a href="shoes.html" class="breadcrumb">Shoes</a>
+         <a href="contact.html" class="breadcrumb">Contact</a>
        </div>
    </div>
  </nav>
