--- a/index.html
+++ b/index.html
@@ -2,48 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Welkom bij Ortwin</title>
 
   <!-- Compiled and minified CSS -->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
+<link rel="stylesheet" type="text/css" href="mystyle.css">
+ <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
  <!-- Compiled and minified JavaScript -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<style>
-  header {background: url(voeten.jpg);
-    background-size: cover;
-    background-position: center;
-    min-height: 300px;
-  }
 
-</style>
 </head>
 <body>
-  <div class="container">
+        <header id="header">
+      <nav class="nav-wrapper">
+        <div class="container">
+            <a href="#" class="brand-logo"></a>
+            <a href="" class="sidenav-trigger" data-trigger="mobile-menu">
+            <i class="material-icons">Menu</i>
+            </a>
 
-    <header>
-  <nav class="nav-wrapper transparent">
-    <div class="container">
-      <a href="#" class="brand-logo"></a>
-      <a href="" class="sidenav-trigger" data-trigger="mobile-menu">
-        <i class="material-icons">Menu</i>
-      </a>
-      <ul class="nav-mobile" class="right hide-on-med-and-down">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Shoes</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+          <ul class="nav-mobile" class="left hide-on-med-and-down">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Shoes</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
 
-      <ul class="sidenav grey darken-3" id="mobile-menu">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Shoes</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+        <ul class="sidenav grey darken-3" id="mobile-menu">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Shoes</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
 
+        </div>
 
-      </div><!--closing div container-->
+    </div>
     </nav>
   </header>
 
@@ -109,9 +104,10 @@
   <nav>
     <div class="nav-wrapper">
        <div class="col l12 push-l8">
-         <a href="#!" class="breadcrumb">Home</a>
-         <a href="#!" class="breadcrumb">Second</a>
-         <a href="#!" class="breadcrumb">Third</a>
+         <a href="#" class="breadcrumb">Home</a>
+         <a href="#" class="breadcrumb">Second</a>
+
+         <a href="#" class="breadcrumb">Third</a>
        </div>
    </div>
  </nav>
