--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="#">Contact</a></li>
           </ul>
 
-        <ul class="sidenav grey darken-3" id="mobile-menu">
+        <ul class="sidenav grey darken-5" id="mobile-menu">
           <li><a href="#">Home</a></li>
           <li><a href="#">Shoes</a></li>
           <li><a href="#">Contact</a></li>
@@ -83,7 +83,38 @@
             </div><!--close div card-->
           </div><!--close div col-->
 
+
+        <div class="col s12 m3">
+          <div class="card">
+              <div class="card-image">
+                <img src="converse_sneaker.jpg" id="sneaker">
+              </div><!--close div card-image-->
+            <div class="card-stacked">
+              <div class="card-content">
+                <h3>Merk in de spotlight</h3>
+                  <p>I am a very simple card. I am good at containing small bits of information.</p>
+              </div>
+            <div class="card-action">
+                <a href="http://www.converse.com/be">Converse</a>
+              </div><!--close div card-action-->
+            </div><!--close div card-stacked-->
+          </div><!--close div card-->
+
         </div><!--close div row-->
+
+        <div class="row">
+          <div class="col s12 m6">
+            <h2>Title</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+          </div>
+
+
+
+        </div>
 
       </div><!--closing div content-->
     </div><!--closing div main-->
@@ -99,16 +130,13 @@
               <div class="col s12 l12">
                 <p class="grey-text text-lighten-4">Trapstraat 38</p>
                 <p class="grey-text text-lighten-4">9620 Zottegem</p>
+              </div>
             </div>
-          </div>
   <nav>
     <div class="nav-wrapper">
        <div class="col l12 push-l8">
          <a href="#" class="breadcrumb">Home</a>
-         <a href="#" class="breadcrumb">Second</a>
-
-         <a href="#" class="breadcrumb">Third</a>
-       </div>
+             </div>
    </div>
  </nav>
             </div>
