information schoen in de kijker

--- a/index.html
+++ b/index.html
@@ -92,7 +92,15 @@
             <div class="card-stacked">
               <div class="card-content">
                 <h3>Merk in de spotlight</h3>
-                  <p>I am a very simple card. I am good at containing small bits of information.</p>
+                  <p>In 1908 werd in Malden, Massachusetts de Converse Rubber Shoe Company (ook bekend als de Boston Rubber Shoe Company) geopend.
+                    In 1910 produceerde Converse dagelijks 4000 schoenen, maar het was pas in 1915 toen het bedrijf begon met produceren van tennisschoenen voor atleten.
+                    In 1921 liep een basketbalspeler met de naam Chuck Taylor de winkel binnen met de klacht dat hij pijnlijke voeten had, Converse gaf hem een baan. Hij werkte als vertegenwoordiger en ambassadeur waardoor hij de schoenen bekend maakte rondom de Verenigde Staten.
+                    Twee jaar later, na het publiceren van een terugblik op de eerste 60 jaar van basketbal, werd zijn handtekening toegevoegd aan de All Star.
+                    Het merk was populair gedurende de jaren 50 en jaren 60 maar verloor veel van zijn schijnbare monopoliepositie vanaf de jaren 70 met de golf van nieuwe concurrenten als Nike, Adidas en Reebok die radicale nieuwe ontwerpen introduceerden.
+
+
+
+                  </p>
               </div>
             <div class="card-action">
                 <a href="http://www.converse.com/be">Converse</a>
