--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             </div><!--close div card-->
           </div><!--close div col-->
 
-
-        <div class="col s12 m3">
+      <div class="row" id="spotlight">
+        <div class="col s12 m6">
           <div class="card">
               <div class="card-image">
                 <img src="converse_sneaker.jpg" id="sneaker">
@@ -97,9 +97,6 @@
                     In 1921 liep een basketbalspeler met de naam Chuck Taylor de winkel binnen met de klacht dat hij pijnlijke voeten had, Converse gaf hem een baan. Hij werkte als vertegenwoordiger en ambassadeur waardoor hij de schoenen bekend maakte rondom de Verenigde Staten.
                     Twee jaar later, na het publiceren van een terugblik op de eerste 60 jaar van basketbal, werd zijn handtekening toegevoegd aan de All Star.
                     Het merk was populair gedurende de jaren 50 en jaren 60 maar verloor veel van zijn schijnbare monopoliepositie vanaf de jaren 70 met de golf van nieuwe concurrenten als Nike, Adidas en Reebok die radicale nieuwe ontwerpen introduceerden.
-
-
-
                   </p>
               </div>
             <div class="card-action">
@@ -110,18 +107,14 @@
 
         </div><!--close div row-->
 
-        <div class="row">
-          <div class="col s12 m6">
-            <h2>Title</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+
+          <div class="col s12 m3">
+            <h2>Over ons</h2>
+            <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
               Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
           </div>
-
-
-
         </div>
 
       </div><!--closing div content-->
@@ -152,7 +145,7 @@
       </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Text
+            © 2019 Copyright Text
 
             <a class="grey-text text-lighten-2 right" href="mailto:#!">shoes@ortwin.be</a>
             </div>
