layout rechts en onder verbeteren

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
 
       <div class="images"></div><!--closing div images-->
     <div class="main">
+
       <div class="content">
+
         <div class="row">
 
           <div class="col s12 m3">
@@ -83,16 +85,20 @@
             </div><!--close div card-->
           </div><!--close div col-->
 
-      <div class="row" id="spotlight">
-        <div class="col s12 m6">
-          <div class="card">
+      <div class="row">
+
+
+
+
+        <div class="col s12 m3" id="spotlight">
+          <div class="card large">
               <div class="card-image">
                 <img src="converse_sneaker.jpg" id="sneaker">
               </div><!--close div card-image-->
             <div class="card-stacked">
               <div class="card-content">
                 <h3>Merk in de spotlight</h3>
-                  <p>In 1908 werd in Malden, Massachusetts de Converse Rubber Shoe Company (ook bekend als de Boston Rubber Shoe Company) geopend.
+                  <p id="kleiner">In 1908 werd in Malden, Massachusetts de Converse Rubber Shoe Company (ook bekend als de Boston Rubber Shoe Company) geopend.
                     In 1910 produceerde Converse dagelijks 4000 schoenen, maar het was pas in 1915 toen het bedrijf begon met produceren van tennisschoenen voor atleten.
                     In 1921 liep een basketbalspeler met de naam Chuck Taylor de winkel binnen met de klacht dat hij pijnlijke voeten had, Converse gaf hem een baan. Hij werkte als vertegenwoordiger en ambassadeur waardoor hij de schoenen bekend maakte rondom de Verenigde Staten.
                     Twee jaar later, na het publiceren van een terugblik op de eerste 60 jaar van basketbal, werd zijn handtekening toegevoegd aan de All Star.
@@ -104,17 +110,22 @@
               </div><!--close div card-action-->
             </div><!--close div card-stacked-->
           </div><!--close div card-->
+        </div><!--close div row-->
+
+        <div class="row">
+          <div class="col s12 m6">
+            <h2>Over ons</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              </p>
+          </div>
 
         </div><!--close div row-->
 
 
-          <div class="col s12 m3">
-            <h2>Over ons</h2>
-            <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
+
         </div>
 
       </div><!--closing div content-->
@@ -129,14 +140,15 @@
               </div>
             <div class="row">
               <div class="col s12 l12">
-                <p class="grey-text text-lighten-4">Trapstraat 38</p>
-                <p class="grey-text text-lighten-4">9620 Zottegem</p>
+                <h5>Trapstraat 38</h5>
+                <h5>9620 Zottegem</h5>
               </div>
             </div>
   <nav>
     <div class="nav-wrapper">
        <div class="col l12 push-l8">
-         <a href="#" class="breadcrumb">Home</a>
+
+         <a href="#" class="breadcrumb"><span class="blue-text text-darken-3">Home</a></span>
              </div>
    </div>
  </nav>
@@ -147,7 +159,7 @@
             <div class="container">
             © 2019 Copyright Text
 
-            <a class="grey-text text-lighten-2 right" href="mailto:#!">shoes@ortwin.be</a>
+            <a class="grey-text text-darken 3 right" href="mailto:#!">dezutterpablo@gmail.com</a>
             </div>
           </div>
         </footer>
