--- a/index.html
+++ b/index.html
@@ -12,41 +12,39 @@
 <link rel="stylesheet" type="text/css" href="mystyle.css">
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
  <!-- Compiled and minified JavaScript -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
 </head>
 <body>
-        <header id="header">
+    <header id="header">
       <nav class="nav-wrapper">
         <div class="container">
             <a href="#" class="brand-logo"></a>
-            <a href="" class="sidenav-trigger" data-trigger="mobile-menu">
-            <i class="material-icons">Menu</i>
+            <a href="#" class="sidenav-trigger" data-target="mobile-links">
+            <i class="material-icons">menu</i>
             </a>
-
-          <ul class="nav-mobile" class="left hide-on-med-and-down">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Shoes</a></li>
-            <li><a href="#">Contact</a></li>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="shoes.html">Shoes</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
+        </div>
+      </nav>
 
-        <ul class="sidenav grey darken-5" id="mobile-menu">
+
+        <ul class="sidenav" id="mobile-links">
           <li><a href="#">Home</a></li>
           <li><a href="#">Shoes</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
 
-        </div>
 
-    </div>
-    </nav>
+
+
   </header>
 
       <div class="images"></div><!--closing div images-->
     <div class="main">
-
       <div class="content">
-
         <div class="row">
 
           <div class="col s12 m3">
@@ -85,20 +83,15 @@
             </div><!--close div card-->
           </div><!--close div col-->
 
-      <div class="row">
-
-
-
-
-        <div class="col s12 m3" id="spotlight">
-          <div class="card large">
+      <div class="col s12 m3">
+          <div class="card">
               <div class="card-image">
                 <img src="converse_sneaker.jpg" id="sneaker">
               </div><!--close div card-image-->
             <div class="card-stacked">
               <div class="card-content">
                 <h3>Merk in de spotlight</h3>
-                  <p id="kleiner">In 1908 werd in Malden, Massachusetts de Converse Rubber Shoe Company (ook bekend als de Boston Rubber Shoe Company) geopend.
+                  <p id="uitleg">In 1908 werd in Malden, Massachusetts de Converse Rubber Shoe Company (ook bekend als de Boston Rubber Shoe Company) geopend.
                     In 1910 produceerde Converse dagelijks 4000 schoenen, maar het was pas in 1915 toen het bedrijf begon met produceren van tennisschoenen voor atleten.
                     In 1921 liep een basketbalspeler met de naam Chuck Taylor de winkel binnen met de klacht dat hij pijnlijke voeten had, Converse gaf hem een baan. Hij werkte als vertegenwoordiger en ambassadeur waardoor hij de schoenen bekend maakte rondom de Verenigde Staten.
                     Twee jaar later, na het publiceren van een terugblik op de eerste 60 jaar van basketbal, werd zijn handtekening toegevoegd aan de All Star.
@@ -110,23 +103,28 @@
               </div><!--close div card-action-->
             </div><!--close div card-stacked-->
           </div><!--close div card-->
+
+
         </div><!--close div row-->
 
         <div class="row">
-          <div class="col s12 m6">
-            <h2>Over ons</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-              </p>
+          <div class="col s12 m12">
+              <div class="card">
+                <div class="card-image">
+                    <span class="card-title"><h2>Over ons</h2></span>
+                </div><!--close div card-image-->
+                <div class="card-content">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div><!--close div card-content-->
+              </div><!--close div card-->
+            </div><!--close div col-->
+
+
           </div>
-
         </div><!--close div row-->
-
-
-
-        </div>
 
       </div><!--closing div content-->
     </div><!--closing div main-->
@@ -140,26 +138,25 @@
               </div>
             <div class="row">
               <div class="col s12 l12">
-                <h5>Trapstraat 38</h5>
-                <h5>9620 Zottegem</h5>
+                <p class="grey-text text-lighten-4">Trapstraat 38</p>
+                <p class="grey-text text-lighten-4">9620 Zottegem</p>
               </div>
             </div>
-  <nav>
-    <div class="nav-wrapper">
-       <div class="col l12 push-l8">
 
-         <a href="#" class="breadcrumb"><span class="blue-text text-darken-3">Home</a></span>
+
+       <div class="col l12 push-l8">
+         <a href="#" class="breadcrumb">Home</a>
              </div>
    </div>
- </nav>
+
             </div>
         </div>
       </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2019 Copyright Text
+            © 2014 Copyright Text
 
-            <a class="grey-text text-darken 3 right" href="mailto:#!">dezutterpablo@gmail.com</a>
+            <a class="grey-text text-lighten-2 right" href="mailto:#!">shoes@ortwin.be</a>
             </div>
           </div>
         </footer>
@@ -169,8 +166,13 @@
 
 
   </div><!--closing div container-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 
+$(document).ready(function(){
+    $('.sidenav').sidenav();
+  });
 
 </script>
 </body>
