--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
               </div>
             <div class="row">
               <div class="col s12 l12">
-                <p class="grey-text text-lighten-4">Trapstraat 38</p>
-                <p class="grey-text text-lighten-4">9620 Zottegem</p>
+                <h4 class="grey-text text-lighten-5">Trapstraat 38</h4>
+                <h5 class="grey-text text-lighten-5">9620 Zottegem</h5>
               </div>
             </div>
 
