--- a/contact.html
+++ b/contact.html
@@ -38,19 +38,57 @@
         </ul>
   </header>
 
+  <div class="container">
     <div class="row">
-      <div class="col s12 m3">
+      <div class="col s12 m6">
         <h1>Contacteer ons</h1>
-        <ul>
-          <li>Kom langs!</li>
-          <li>Contactformulier</li>
-          <li></li>
-          <li></li>
-        </ul>
+    </div>
+
+        <div class="row">
+  <form class="col s12">
+    <div class="row">
+      <div class="input-field col s6">
+        <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+        <label for="first_name">First Name</label>
       </div>
-      <div class="col s12 m12">
-        <
-          <form action=""></form>
+      <div class="input-field col s6">
+        <input id="last_name" type="text" class="validate">
+        <label for="last_name">Last Name</label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s12">
+        <input disabled value="I am not editable" id="disabled" type="text" class="validate">
+        <label for="disabled">Disabled</label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s12">
+        <input id="password" type="password" class="validate">
+        <label for="password">Password</label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s12">
+        <input id="email" type="email" class="validate">
+        <label for="email">Email</label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12">
+        This is an inline input field:
+        <div class="input-field inline">
+          <input id="email_inline" type="email" class="validate">
+          <label for="email_inline">Email</label>
+          <span class="helper-text" data-error="wrong" data-success="right">Helper text</span>
+        </div>
+      </div>
+    </div>
+  </form>
+</div>
+
+      </div>
+
 
 
 
@@ -80,19 +118,19 @@
                 <p class="grey-text text-lighten-4">9620 Zottegem</p>
               </div>
             </div>
-  <nav>
-    <div class="nav-wrapper">
+
        <div class="col l12 push-l8">
-         <a href="#" class="breadcrumb">Home</a>
-             </div>
-   </div>
+         <a href="index.html" class="breadcrumb">Home</a>
+         <a href="shoes.html" class="breadcrumb">Shoes</a>
+         <a href="contact.html" class="breadcrumb">Contact</a>
+
  </nav>
             </div>
         </div>
       </div>
           <div class="footer-copyright">
             <div class="container">
-            © 2014 Copyright Text
+            © 2019 Copyright Text
 
             <a class="grey-text text-lighten-2 right" href="mailto:#!">shoes@ortwin.be</a>
             </div>
