--- a/contact.html
+++ b/contact.html
@@ -8,9 +8,9 @@
   <title>Welkom bij Ortwin</title>
 
   <!-- Compiled and minified CSS -->
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <link rel="stylesheet" type="text/css" href="mystyle.css">
- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
  <!-- Compiled and minified JavaScript -->
 
 </head>
@@ -40,53 +40,127 @@
 
   <div class="container">
     <div class="row">
+      <div class="col s12 m12">
+        <h1>Kom langs of contacteer ons</h1>
+
+      </div><!--close div col-->
       <div class="col s12 m6">
-        <h1>Contacteer ons</h1>
+
+        <h2>Openingsuren</h2>
+
+              <table>
+                <thead>
+                  <tr>
+                      <th>Dagen</th>
+                      <th>Ochtend</th>
+                      <th>Namiddag</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                  <tr>
+                    <td>Maandag</td>
+                    <td>Gesloten</td>
+                    <td>13u30 tot 18u30</td>
+                  </tr>
+                  <tr>
+                    <td>Dinsdag tem vrijdag</td>
+                    <td>9u tot 12u</td>
+                    <td>13u30 tot 18u30</td>
+                  </tr>
+                  <tr>
+                    <td>Zaterdag</td>
+                    <td>9u tot 12u30</td>
+                    <td>13u30 tot 18u</td>
+                  </tr>
+                  <tr>
+                    <td>Zondag</td>
+                    <td>Gesloten</td>
+                    <td>Gesloten</td>
+                  </tr>
+                </tbody>
+              </table>
+          </div>
+
+
+
+    <div class="col s12 m6">
+      <h2>Straatplan</h2>
+        <img src="stratenplan.jpeg" alt="locatie_trapstraat" width="800px" height="600px">
+
+      <p>Wees alert! In de buurt is het overal blauwe zone. Vergeet uw parkeerkaart niet! Voor de deur is het betalend parkeren. U kunt ook gebruik maken
+        van de parkings in de buurt.<img src="parkeerkaart.jpeg" width="100px" height="80px" class="right"></p>
+
+
     </div>
 
+        <div class="contactformulier">
+            <div class="row">
+              <h2>Contactformulier</h2>
+            </div>
         <div class="row">
-  <form class="col s12">
-    <div class="row">
-      <div class="input-field col s6">
-        <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-        <label for="first_name">First Name</label>
-      </div>
-      <div class="input-field col s6">
-        <input id="last_name" type="text" class="validate">
-        <label for="last_name">Last Name</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="input-field col s12">
-        <input disabled value="I am not editable" id="disabled" type="text" class="validate">
-        <label for="disabled">Disabled</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="input-field col s12">
-        <input id="password" type="password" class="validate">
-        <label for="password">Password</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="input-field col s12">
-        <input id="email" type="email" class="validate">
-        <label for="email">Email</label>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col s12">
-        This is an inline input field:
-        <div class="input-field inline">
-          <input id="email_inline" type="email" class="validate">
-          <label for="email_inline">Email</label>
-          <span class="helper-text" data-error="wrong" data-success="right">Helper text</span>
-        </div>
-      </div>
-    </div>
-  </form>
-</div>
+          <div class="col s12 m6">
+            <form class="" action="">
+              <div class="input-field">
+                <i class="material-icons prefix">email</i>
+                <input type="email" id="email">
+                <label for="email">Uw emailadres</label>
+              </div>
 
+              <div class="input-field">
+                <i class="material-icons prefix">message</i>
+                  <textarea id="message" class="materialize-textarea"></textarea>
+                  <label for="message">Uw bericht</label>
+              </div>
+                <br>
+                <p>Hebt u schoenen besteld en u wilt ze graag passen? Kies hier uw datum, dan maken we graag tijd voor u!</p>
+
+              <div class="input-field">
+                <input type="text" id="date" class="datepicker">
+                <label for="date">Kies een datum </label>
+              </div>
+
+              <div class="input-field">
+                <p>Waarom wilt u precies een afspraak maken</p>
+                <p>
+                  <label>
+                  <input type="checkbox">
+                  <span>Schoenen passen na bestelling</span>
+                  </label>
+                </p>
+
+                <p>
+                  <label>
+                  <input type="checkbox">
+                  <span>Probleem met schoenen</span>
+                  </label>
+                </p>
+
+                <p>
+                  <label>
+                  <input type="checkbox">
+                  <span>Andere vraag</span>
+                  </label>
+                </p>
+
+
+
+
+              </div>
+
+
+
+
+
+
+            </form>
+
+
+
+
+          </div>
+
+</div><!--closing contactformulier-->
       </div>
 
 
@@ -142,14 +216,25 @@
 
 
   </div><!--closing div container-->
+
+<script type="text/javascript" src="js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
 
 $(document).ready(function(){
     $('.sidenav').sidenav();
-  });
 
-</script>
+$(document).ready(function(){
+    $('select').formSelect();
+
+$('.datepicker').datepicker({
+
+});
+});
+
+
+
+  </script>
 </body>
 </html>
