contactpagina volledig, java werkt niet, homepage tekst toevoegen

--- a/contact.html
+++ b/contact.html
@@ -142,17 +142,12 @@
                   <span>Andere vraag</span>
                   </label>
                 </p>
-
-
-
-
               </div>
 
+              <div class="input-field center">
+                  <button class="btn">Verstuur</button>
 
-
-
-
-
+              </div>
             </form>
 
 
