--- a/index.html
+++ b/index.html
@@ -111,14 +111,20 @@
           <div class="col s12 m12">
               <div class="card">
                 <div class="card-image">
-                    <span class="card-title"><h2>Over ons</h2></span>
+                    <span class="card-title"></span>
                 </div><!--close div card-image-->
                 <div class="card-content">
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div><!--close div card-content-->
+                  <h2>Over ons</h2>
+                  <p>Al meer dan 65 jaar staan Ortwin voor u klaar om de perfecte persoonlijke match te vinden, toch wat uw schoenen betreft.
+                     Onze collectie wordt samengesteld met als basis 3 zeer belangrijke pijlers die we heel hoog houden:</p>
+                     <ul>
+                        <li>Mode</li>
+                        <li>Comfort</li>
+                        <li>Kwaliteit</li>
+                      </ul>
+                    <p>  Als u vragen hebt over onze collecties, merken of een probleem hebt, aarzel niet om ons te contacteren!
+                  </p>
+                  </div><!--close div card-content-->
               </div><!--close div card-->
             </div><!--close div col-->
 
