--- a/shoes.html
+++ b/shoes.html
@@ -116,7 +116,7 @@
 
         <footer class="page-footer">
           <div class="container">
-            
+
             <div class="row">
               <div class="left"> <img src="logo_ortwin.jpg" height="50px" widt="50px">
               </div>
@@ -129,8 +129,8 @@
 
 
        <div class="col l12 push-l8">
-         <a href="#" class="breadcrumb">Home</a>
-         <a href="#" class="breadcrumb">Shoes</a>
+         <a href="index.html" class="breadcrumb">Home</a>
+         <a href="shoes.html" class="breadcrumb">Shoes</a>
              </div>
 
 
