trying to get the design good

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 </head>
 <body>
-    <header id="header">
+      <header id="header">
       <nav class="nav-wrapper">
         <div class="container">
-            <a href="#" class="brand-logo"></a>
+            <a href="#" class="brand-logo">Ortwin</a>
             <a href="#" class="sidenav-trigger" data-target="mobile-links">
             <i class="material-icons">menu</i>
             </a>
@@ -37,14 +37,12 @@
           <li><a href="#">Contact</a></li>
         </ul>
 
-
-
-
   </header>
 
-      <div class="images"></div><!--closing div images-->
+
     <div class="main">
       <div class="content">
+
         <div class="row">
 
           <div class="col s12 m3">
@@ -54,7 +52,7 @@
                 <span class="card-title"></span>
               </div><!--close div card-image-->
               <div class="card-content">
-                <p>Collectie Herenschoenen</p>
+                <p>Ontdek de nieuwste collectie herenschoenen</p>
               </div><!--close div card-content-->
             </div><!--close div card-->
           </div><!--close div col-->
@@ -66,7 +64,7 @@
                 <span class="card-title"></span>
               </div><!--close div card-image-->
               <div class="card-content">
-                <p>Collectie Vrouwenschoenen</p>
+                <p>Ontdek de nieuwste collectie vrouwenschoenen</p>
               </div><!--close div card-content-->
             </div><!--close div card-->
           </div><!--close div col-->
@@ -78,7 +76,7 @@
                 <span class="card-title" ></span>
               </div><!--close div card-image-->
               <div class="card-content">
-                <p>Collectie Kinderschoenen</p>
+                <p>Ontdek de nieuwste collectie kinderschoenen</p>
               </div><!--close div card-content-->
             </div><!--close div card-->
           </div><!--close div col-->
@@ -107,22 +105,34 @@
 
         </div><!--close div row-->
 
-        <div class="row">
-          <div class="col s12 m12">
-              <div class="card">
+      <div>
+        <div class="merk_logos">
+          <div class="row">
+            <img src="clarks_logo.jpg" width=200px height=200px>
+            <img src="rondinella_logo.jpg" width=200px height=200px>
+            <img src="stonesbones_logo.jpg" width=200px height=200px>
+            <img src="vanbommel_logo.jpg">
+        </div>
+        </div>
+
+      </div>
+          <div class="col s12 m8" >
+              <div class="card horizontal">
                 <div class="card-image">
+                  <img src="ortwin_huis.jpg" class="left-align" width="600px">
                     <span class="card-title"></span>
                 </div><!--close div card-image-->
                 <div class="card-content">
                   <h2>Over ons</h2>
-                  <p>Al meer dan 65 jaar staan Ortwin voor u klaar om de perfecte persoonlijke match te vinden, toch wat uw schoenen betreft.
+                  <p class="losse_tekst" class="right-align">Al meer dan 65 jaar staan Ortwin voor u klaar om de perfecte persoonlijke match te vinden, toch wat uw schoenen betreft.
                      Onze collectie wordt samengesteld met als basis 3 zeer belangrijke pijlers die we heel hoog houden:</p>
-                     <ul>
+                     <ul id="pijlers">
                         <li>Mode</li>
                         <li>Comfort</li>
                         <li>Kwaliteit</li>
                       </ul>
-                    <p>  Als u vragen hebt over onze collecties, merken of een probleem hebt, aarzel niet om ons te contacteren!
+
+                    <p class="losse_tekst">  Als u vragen hebt over onze collecties, merken of een probleem hebt, aarzel niet om ons te contacteren!
                   </p>
                   </div><!--close div card-content-->
               </div><!--close div card-->
@@ -130,7 +140,7 @@
 
 
           </div>
-        </div><!--close div row-->
+
 
       </div><!--closing div content-->
     </div><!--closing div main-->
@@ -152,8 +162,12 @@
 
        <div class="col l12 push-l8">
          <a href="#" class="breadcrumb">Home</a>
+               <div class"social_logos">
+           <img src="facebook.png"height="100">
+         <img src="instagram.png" height="100">
+         <img src="twitter.png" height="100">
              </div>
-   </div>
+           </div>
 
             </div>
         </div>
@@ -162,7 +176,7 @@
             <div class="container">
             © 2014 Copyright Text
 
-            <a class="grey-text text-lighten-2 right" href="mailto:#!">shoes@ortwin.be</a>
+            <a class="grey-text text-darken-2 right" href="mailto:#!">shoes@ortwin.be</a>
             </div>
           </div>
         </footer>
@@ -172,6 +186,7 @@
 
 
   </div><!--closing div container-->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script>
